# serializer version: 1
# name: test_full_user_flow
  FlowResultSnapshot({
    'context': dict({
      'source': 'user',
      'unique_id': '12345',
    }),
    'data': dict({
      'house_letter': 'A',
      'house_number': '1',
      'id': 12345,
      'post_code': '1234AB',
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'twentemilieu',
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'house_letter': 'A',
        'house_number': '1',
        'id': 12345,
        'post_code': '1234AB',
      }),
      'disabled_by': None,
      'domain': 'twentemilieu',
      'entry_id': <ANY>,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'title': '12345',
      'unique_id': '12345',
      'version': 1,
    }),
    'title': '12345',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
# name: test_invalid_address
  FlowResultSnapshot({
    'context': dict({
      'source': 'user',
      'unique_id': '12345',
    }),
    'data': dict({
      'house_letter': None,
      'house_number': '1',
      'id': 12345,
      'post_code': '1234AB',
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'twentemilieu',
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'house_letter': None,
        'house_number': '1',
        'id': 12345,
        'post_code': '1234AB',
      }),
      'disabled_by': None,
      'domain': 'twentemilieu',
      'entry_id': <ANY>,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'title': '12345',
      'unique_id': '12345',
      'version': 1,
    }),
    'title': '12345',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
